# Optimization

./: .gitignore  .gitmodules  CMakeLists.txt  Optimization.sln
Optimization/: API.cpp  API.h  CMakeLists.txt  CostFuncs.cpp  CostFuncs.h  Curve.cpp  Curve.h  CurveHold.cpp  CurveHold.h  CurveHoldCurveHold.cpp  CurveHoldCurveHold.h  Hold.cpp  Hold.h  Opt.vcxproj  Opt.vcxproj.filters  Optimization.vcxproj  Optimization.vcxproj.filters  OptimizeWells.cpp  OptimizeWells.h  PSO.cpp  PSO.h  Penalties.h  Slotting.cpp  Solver.h  Source.cpp  TestWells.cpp  TestWells.h  TrajectoryTemplate.cpp  TrajectoryTemplate.h  WellCHCHtest.txt  WellCHCHtestInc.txt  WellCHtest.txt  WellTrajectorySolver.cpp  WellTrajectorySolver.h  Welltest.txt  dataPSO.csv  inclinometry().txt  inclinometry(4002).txt  inclinometry(40R).txt  inclinometry(4PO).txt  (+35 more)
Optimization/3WellOptimization/: OPTIMIZATION RESULTS.txt  inclinometry4001.txt  inclinometry4003.txt  inclinometry40R.txt  outputWell(A).txt  outputWell(B).txt  outputWell(C).txt
Optimization/4WellOptimization/: OPTIMIZATION RESULTS.txt  Optresults.txt  inclinometry4000(1).txt  inclinometry4000.txt  inclinometry4001(1).txt  inclinometry4001.txt  inclinometry4003(1).txt  inclinometry4003.txt  inclinometry40R(1).txt  inclinometry40R.txt  outputWell(A).txt  outputWell(B).txt  outputWell(C).txt  outputWell(D).txt
Optimization/Results/: cartesian4001.txt  cartesian4003.txt  cartesian40R.txt  inclinometry4000.csv  inclinometry40R.csv
Optimization/include/: CostFuncs.h  Curve.h  CurveHold.h  CurveHoldCurveHold.h  Hold.h  OptimizeWells.h  PSO.h  Penalties.h  SepFactor.h  Separation_factor.h  Slotting.h  TestWells.h  TrajectoryTemplate.h  WellTrajectorySolver.h  optimize_wells_test.h
Optimization/input/: optimization_input.json
Optimization/output/: 1test.json  alone_res.json  bestcost.txt  testcase_wo_separation.json  together_worisks.json
Optimization/output/Cartesian/: Horizontal.txt  WellCHCHtest.txt  WellCHtest.txt  case1OneScore1.txt  case1OneScore2.txt  ouptput1.txt  output.txt  output1.txt  output10.txt  output11.txt  output2.txt  output3.txt  output4.txt  output6.txt  output8.txt  outputCURVE.txt  outputFIND.txt  outputWell().txt  outputWell(4000).txt  outputWell(4001).txt  outputWell(40R).txt  outputWell(5007).txt  outputWell(5008).txt  outputWell(5PO).txt  outputWell(A).txt  outputWell(B).txt  outputWell(C).txt  outputWell(D).txt  outputWellNew(4000).txt  outputWellNew(4001).txt  outputWellNew(4002).txt  outputWellNew(4003).txt  outputWellNew(40R).txt  outputWellNew(4PO).txt  outputWellNew(5006).txt  outputWellNew(5007).txt  outputWellNew(5008).txt  outputWellNew(50R).txt  outputWellNew(5PO).txt  outputWellNew4000.txt  (+9 more)
Optimization/output/Inclinometry/: WellCHCHtestInc.txt  inclinometry(4000).txt  inclinometry(4001).txt  inclinometry(4003).txt  inclinometry(5007).txt  inclinometry(5PO).txt  inclinometry.txt  inclinometry4000.txt  inclinometry4001).txt  inclinometry4001.txt  inclinometry4003).txt  inclinometry40R).txt  inclinometry40R.txt  inclinometryHorizontal.txt  inclinometryNew(4000).txt  inclinometryNew(4001).txt  inclinometryNew(4002).txt  inclinometryNew(4003).txt  inclinometryNew(40R).txt  inclinometryNew(4PO).txt  inclinometryNew(5006).txt  inclinometryNew(5007).txt  inclinometryNew(5008).txt  inclinometryNew(50R).txt  inclinometryNew(5PO).txt  inclinometryNew4000.txt  inclinometryNew4001.txt  inclinometryNew4003.txt  inclinometryNew40R.txt  innc.txt  wellSolver.txtHorizontal.txt
Optimization/output/alone_optimization/: alone_opt01.json
Optimization/output/colrisk_optimization/: colrisk_opt123.json  colrisk_opt321.json  statistics123.json  statistics123reg.json  statistics231.json
Optimization/output/colrisk_optimization0/: colrisk_opt123.json  colrisk_opt213.json  colrisk_opt231.json  colrisk_opt312.json
Optimization/output/cost_graph/: 1.xlsx  cost_graph.json
Optimization/output/excel_data/: opt-result.xlsx  p3d.xlsx
Optimization/src/: CostFuncs.cpp  Curve.cpp  CurveHold.cpp  CurveHoldCurveHold.cpp  Hold.cpp  OptimizeWells.cpp  PSO.cpp  Penalties.cpp  SepFactor.cpp  Slotting.cpp  Source.cpp  TestWells.cpp  TrajectoryTemplate.cpp  WellTrajectorySolver.cpp  optimize_wells_test.cpp
include/: CostFuncs.h  (+7 more)
(+111 files in other folders)
